--- a/go.html
+++ b/go.html
@@ -169,18 +169,18 @@
          <div class="image_gallery" id="image_gallery">
             <h1>Images of Our project :-</h1>
             <div class="contain">
-                <img src="/1.jpg"/>
-                <img src="/2.jpg"/>
-                <img src="/3.jpg"/>
-                <img src="/4.jpg"/>
-                <img src="/5.jpg"/>
-                <img src="/6.jpg"/>
-                <img src="/7.jpg"/>
-                <img src="/8.jpg"/>
-                <img src="/9.jpg"/>
-                <img src="/10.jpg"/>
-                <img src="/11.jpg"/>
-                <img src="/12.jpg"/>
+                <img src="1.jpg"/>
+                <img src="2.jpg"/>
+                <img src="3.jpg"/>
+                <img src="4.jpg"/>
+                <img src="5.jpg"/>
+                <img src="6.jpg"/>
+                <img src="7.jpg"/>
+                <img src="8.jpg"/>
+                <img src="9.jpg"/>
+                <img src="10.jpg"/>
+                <img src="11.jpg"/>
+                <img src="12.jpg"/>
             </div>
          </div>
          <div class="settings_main" id="settings_main">we will update it soon</div>
